# exasol-labs-ai-process-mining

./: README.md  global.css  process_insights.py  pyproject.toml
tools/inputs/: filters.py
tools/llm/: llm_flowchart.py  system_prompt.py
tools/sql_builder/: sql_builder.py
tools/statistics/: statistic_widgets.py
tools/wrappers/: text_wrappers.py
